--- a/cap1.tex
+++ b/cap1.tex
@@ -15,7 +15,8 @@ Thyago
 Thyago
 \chapter{Tecnologia de Transporte}
 \label{cap:technology}
-FABIO e ISAAC
+FABIO faz a parte de Tecnologias 
+e Isaac faz a parte de multiplexação dessas tecnologias.
 
 \section{PDH}
 \label{sec:pdh}
