quem vai fazer a introducao

--- a/cap1.tex
+++ b/cap1.tex
@@ -1,7 +1,7 @@
 \chapter{Introducao}
 \label{cap:introduction}
 
-THYAGO
+THYAGO vai fazer a parte introdutória até as tecnologias.
 
 \section{História}
 \label{sec:history}
