informando ao thyago do que fazer

--- a/cap1.tex
+++ b/cap1.tex
@@ -2,6 +2,7 @@
 \label{cap:introduction}
 
 THYAGO vai fazer a parte introdutória até as tecnologias.
+Ele ja sabe o que fazer.
 
 \section{História}
 \label{sec:history}
