Primeira Modificacao, pois dinheiro eh igual orgamos, uns tem, outros jah tiveram e uns fingem que tem ... o que nao tem no caso d Alaelson

--- a/cap1.tex
+++ b/cap1.tex
@@ -35,7 +35,7 @@ subsessão dentro de cada tecnologia de transporte.
 
 \section{Relacinamento entre Camadas}
 \label{sec:layers}
-LAILSON
+Lailson: Está é minha parte. Estou modificando via GIT.
 
 \chapter{Plano de Controle}
 \label{cap:control}
