--- a/cap1.tex
+++ b/cap1.tex
@@ -21,11 +21,12 @@ e Isaac faz a parte de multiplexação dessas tecnologias.
 
 \section{PDH}
 \label{sec:pdh}
-FABIO
+PDH VAI FICAR AQUI OU VAI SER FALADO SOMENTE NO HISTÓRICO?
 
-\section{SONET/SDH}
+\section{SONET e SDH}
 \label{sec:sdh}
-FABIIO
+\input{sectionSonetSDH}
+
 \section{OTN}
 \label{sec:otn}
 ALAELSON
