Fui atraz de referências para poder falar de datas.
Achei referências no IEEE que impressionantemente são iguais as que
estão no slide do RUDGE BOY, provando que ele realmente estava
lá!!!!!!!!!!!!

--- a/cap1.tex
+++ b/cap1.tex
@@ -23,7 +23,7 @@ e Isaac faz a parte de multiplexação dessas tecnologias.
 \label{sec:pdh}
 PDH VAI FICAR AQUI OU VAI SER FALADO SOMENTE NO HISTÓRICO?
 
-\section{SONET e SDH}
+\section{SONET/SDH}
 \label{sec:sdh}
 \input{sectionSonetSDH}
 
