--- a/referencias.bib
+++ b/referencias.bib
@@ -633,6 +633,32 @@
   url = {http://cp.literature.agilent.com/litweb/pdf/5988-3655EN.pdf}
 }
 
+@ARTICLE{Boehm1990, 
+author={Boehm, R.}, 
+journal={LCS, IEEE}, 
+title={Progress in standardization of SONET}, 
+year={1990}, 
+month={May}, 
+volume={1}, 
+number={2}, 
+pages={8-16}, 
+keywords={computer interfaces;digital communication systems;optical links;protocols;standards;telecommunication channels;ANSI T1.105;ANSI T1.106;CCITT standardization;SONET standard;data communications channel;interface specifications;operations support information communication;optical parameter specification;protocols;rate/format specifications;synchronous optical network;Communication industry;Electrical capacitance tomography;Optical fiber devices;Optical fiber networks;Proposals;SONET;Skeleton;Standardization;Standards organizations;Telecommunication standards}, 
+doi={10.1109/73.80381}, 
+ISSN={1045-9235},}
+
+@ARTICLE{Ballart2002, 
+author={Ballart, R. and Yau-Chau Ching}, 
+journal={Communications Magazine, IEEE}, 
+title={SONET: now it's the standard optical network}, 
+year={2002}, 
+month={May}, 
+volume={40}, 
+number={5}, 
+pages={84-92}, 
+keywords={Books;Manufacturing;Multiplexing;Optical fiber networks;Optical fibers;Optical interconnections;Proposals;SONET;Standardization;Synchronous digital hierarchy}, 
+doi={10.1109/MCOM.2002.1006977}, 
+ISSN={0163-6804},}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
