--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -1,2 +1,4 @@
 
-A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação. Em 1984 a associação americana chamada \textit{Exchange Carriers Standards Association} (ECSA) iniciou trabalhos com a finalidade de desenvolvimento de um padrão para o \textit{American National Standards Institute} (ANSI) e no ano de 1985 foi criado o padrão de transporte em redes de telecomunicações chamado de \textit{Synchronous Optical Network} (SONET), adotado em países como Estados Unidos, Canada e Japão. O \textit{International Telegraph and Telephone Consultative Committee} (CCITT), atualmente conhecido como \textit{International Telecommunication Union Telecommunication Standardization Sector} (ITU-T), interessou-se pelo padrão ANSI e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo e o órgão CCITT definiu o padrão conhecido como \textit{Synchronous Digital Hierarchy} (SDH), amplamente adotado na Europa e em países como o Brasil. Devido ao fato de que SDH foi desenvolvido a partir de SONET, ambos guardam muitos conceitos tecnológicos semelhantes, onde as diferenças se situam em certas denominações de parâmetros e nas velocidades das hierarquias.
+A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação. Em 1984, a associação americana chamada \textit{Exchange Carriers Standards Association} (ECSA) iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \textit{American National Standards Institute} (ANSI) e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \textit{Synchronous Optical Network} (SONET)~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O \textit{International Telegraph and Telephone Consultative Committee} (CCITT), atualmente conhecido como \textit{International Telecommunication Union Telecommunication Standardization Sector} (ITU-T), demonstrou interesse pelo padrão ANSI~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \textit{Synchronous Digital Hierarchy} (SDH), amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a SONET enquanto a recomendação ITU-T G.707 é a principal recomendação relacionada ao padrão SDH.
+
+SONET e SDH guardam os mesmos conceitos tecnológicos e as diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. A seguir, serão abordados características importantes que se aplicam a ambas as tecnologias de transporte, porém, optou-se por utilizar a nomenclatura referente a SDH.
