MAIS ALGUMAS MODIFICAÇÕES
Adicionei algumas referências e alguns conceitos sobre SDH e SONET.
Ainda irei explicar a estrutura do frame.

--- a/referencias.bib
+++ b/referencias.bib
@@ -659,6 +659,16 @@ keywords={Books;Manufacturing;Multiplexing;Optical fiber networks;Optical fibers
 doi={10.1109/MCOM.2002.1006977}, 
 ISSN={0163-6804},}
 
+@book{Ramaswami2009,
+ author = {Ramaswami, Rajiv and Sivarajan, Kumar and Sasaki, Galen},
+ title = {Optical Networks: A Practical Perspective, 3rd Edition},
+ year = {2009},
+ isbn = {0123740924, 9780123740922},
+ edition = {3rd},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
