--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -5,7 +5,7 @@ SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças 
 
 \begin{enumerate}
 
-\item {\bf Simplificações no processo de multiplexação:} Como já visto anteriormente, o processo de retirada de sinais tributários de baixas taxas de um sinal multiplexado de taxa superior é uma operação difícil na tecnologia PDH, devido ao fato de que são necessárias demultiplexações e multiplexações sucessivas para se poder localizar o tributário requerido, retirá-lo e então remontar o frame de alta taxa. Isso acaba implicando em altos custos de instalação da rede PDH e em baixa confiabilidade devido a quantidade de dispositivos eletrônicos envolvidos nos nós aos longo da rede. A estrutura de multiplexação síncrona de SONET/SDH permite significativa redução de complexidade e custos relacionados ao processo de extração e inserção de tributários em sinais multiplexados bem como aumenta a confiabilidade do sistema como um todo. Isso porque nas redes SONET/SDH, todos os nós da rede tem clock sincronizados, de modo que as taxas de transmissão são simplesmente múltiplos de um valor base e não se é necessário o preenchimento de um tributário com bits vazios para possibilitar a multiplexação, como era necessário na tecnologia PDH. Assim, a extração de um sinal tributário de um sinal de alta taxa é simplificada. Esse processo é ainda mais simplificado devido a utilização de um \textit{frame} que permite serem inseridas maiores informações sobre \textit{payload}. O processo de inserção de tributários também se torna simplificado, já que os sinais possuem taxas de transmissão muito mais precisas e próximas umas das outras do que na tecnologia PDH~\cite{Ramaswami2009}.
+\item {\bf Simplificações no processo de multiplexação:} Como já visto anteriormente, o processo de retirada de sinais tributários de baixas taxas de um sinal multiplexado de taxa superior é uma operação difícil na tecnologia PDH, devido ao fato de que são necessárias demultiplexações e multiplexações sucessivas para se poder localizar o tributário requerido, retirá-lo e então remontar o frame de alta taxa. Isso acaba implicando em altos custos de instalação da rede PDH e em baixa confiabilidade devido a quantidade de dispositivos eletrônicos envolvidos nos nós aos longo da rede. A estrutura de multiplexação síncrona de SONET/SDH permite significativa redução de complexidade e custos relacionados ao processo de extração e inserção de tributários em sinais multiplexados bem como aumenta a confiabilidade do sistema como um todo. Isso porque nas redes SONET/SDH, todos os nós da rede tem clock sincronizados, de modo que as taxas de transmissão são simplesmente múltiplos de um valor base e não se é necessário o preenchimento de um tributário com bits vazios para possibilitar a multiplexação, como era necessário na tecnologia PDH. Assim, a extração de um sinal tributário de um sinal de alta taxa é simplificada. Esse processo é ainda mais simplificado devido a utilização de um \textit{frame} que permite serem inseridas maiores informações sobre o \textit{payload}. O processo de inserção de tributários também se torna simplificado, já que os sinais possuem taxas de transmissão muito mais precisas e próximas umas das outras do que na tecnologia PDH~\cite{Ramaswami2009}.
 
 \item{\bf Informações de Gerenciamento:} Os padrões SONET e SDH oferecem maiores recursos de monitoramento, gerenciamento e controle do que está presente nas redes PDH. Como será visto mais adiante, o \textit{frame} dos padrões SONET e SDH oferecem campos específicos a atividade de monitoramento e gestão da comunicação.
 
@@ -25,21 +25,35 @@ Uma das principais características do \textit{frame} SDH é sua bidimensionalidad
 \begin{figure}[H]
  \centering
  \includegraphics[scale=.6]{FrameSDH.png}
-  \caption{Estrutura do \textit{frame} SDH - ITU-T G.707.}
+  \caption{Estrutura do \textit{frame} SDH - ITU-T G.707~\cite{G707}.}
  \label{fig:FrameSDH}
 \end{figure}
 
-O \textit{frame} SDH é formado por duas principais partes, sendo elas o cabeçalho ou \textit{overhead}, que é composto por 9 \(\cdot\) N colunas (sendo N o nível da hierarquia) e 9 linhas e o \textit{payload}, composto por 261 \(\cdot\) N colunas e 9 linhas. O \textit{payload} é a parte onde os dados dos clientes são inseridos para a transmissão. O cabeçalho, por sua vez, contém as informações do quadro STM-N referentes a desempenho, manutenção, monitoramento e indicações das localidades dos tributários multiplexados nos \textit{frames}, além de funções operacionais, permitindo uma gerência maior por parte dos nós da rede. Esta parte do \textit{frame} se subdivide em três unidades básicas como enumerado a seguir:
+O \textit{frame} SDH é formado por duas principais partes, sendo elas o cabeçalho ou \textit{overhead}, que é composto por 9 \(\cdot\) N colunas (sendo N o nível da hierarquia) e 9 linhas e o \textit{payload}, composto por 261 \(\cdot\) N colunas e 9 linhas. O \textit{payload} é a parte onde os dados dos clientes são inseridos para a transmissão. 
+
+
+O cabeçalho, por sua vez, contém as informações do quadro STM-N referentes a desempenho, manutenção, monitoramento e indicações das localidades dos tributários multiplexados nos \textit{frames}, além de funções operacionais, permitindo uma gerência maior por parte dos nós da rede. Esta parte do \textit{frame} se subdivide em duas unidades básicas, a primeira delas sendo chamada de \textit{Section Overhead} (SOH) e a segunda de \textit{Administrative Unit Pointers}. A seguir, apresenta-se uma breve descrição das funcionalidade contidas em cada uma das partes mencionadas:
 
 \begin{enumerate}
 
-\item{\bf \textit{Regenerator Section Overhead} (RSOH):} Parte do cabeçalho que é processada em cada nó destinado a regeneração. De forma mais específica, essa é uma região do quadro SDH que contém informações que permitem o alinhamento e identificação de \textit{frame}, monitoramento de erro de regeneração, alarmes físicos externos ao equipamento e supervisão de sistema.
+\item{\bf \textit{Section Overhead} (SOH):} Esta seção se divide em duas principais partes, como indicado a seguir:
+
+\subitem{\bf \textit{Regenerator Section Overhead} (RSOH):} Parte do cabeçalho que é processada em cada nó destinado a regeneração. De forma mais específica, essa é uma região do quadro SDH que contém informações que permitem o alinhamento e identificação de \textit{frame}, monitoramento de erro de regeneração, alarmes físicos externos ao equipamento e supervisão de sistema.
+ 
+\subitem{\bf \textit{Multiplex Section Overhead} (MSOH):} Parte do cabeçalho que é apenas processada em equipamentos onde existe inserção ou retiradas de canais multiplexados. Inclui informações de monitoramento e indicação de erros de multiplexação, controle de chaveamento de mecanismos de proteção, monitoramento de sincronismo e gerência de sistema.
 
 \item{\bf \textit{Administrative Unit Pointers}:} Esta é uma parte do cabeçalho destinada a prover informações de posição dos dados dos clientes que foram multiplexados para formarem o \textit{frame} SDH. Possui indicação de onde se localiza o primeiro \textit{byte} dos \textit{Virtual Containers} (VC) dentro da área de informação útil (\textit{payload}) e também pode conter \textit{bytes} provenientes de justificação dos VCs. É uma parte do cabeçalho processada em cada equipamento da rede
- 
-\item{\bf \textit{Multiplex Section Overhead} (MSOH):} Parte do cabeçalho que é apenas processada em equipamentos onde existe inserção ou retiradas de canais multiplexados. Inclui informações de monitoramento e indicação de erros de multiplexação, controle de chaveamento de mecanismos de proteção, monitoramento de sincronismo e gerência de sistema.
 
 \end{enumerate}
+
+A Figura~\ref{fig:OverheadSDH} ilustra a disposição utilizada para as partes RSOH e MSOH no cabeçalho. 
+
+\begin{figure}[H]
+ \centering
+ \includegraphics[scale=.7]{OverheadSDH.png}
+  \caption{RSOH e MSOH - ITU-T G.707~\cite{G707}.}
+ \label{fig:OverheadSDH}
+\end{figure}
 
 
 
