--- a/work.tex
+++ b/work.tex
@@ -170,7 +170,7 @@
 \doublespacing
 \pagenumbering{arabic}
 \include{cap1}
-%\include{cap2/cap2}
+\include{cap2}
 \include{cap3/cap3}
 \include{cap4/cap4}
 %\include{cap5/cap5a}
