adicionei uma bibliografia nas referencias

--- a/referencias.bib
+++ b/referencias.bib
@@ -31,7 +31,7 @@
   title = {{Projeto de Sistemas de Comunica{\c{c}}{\~o}es {\'O}pticas}},
   publisher = {Manole},
   year = {2005},
-  author = {José Roberto de Almeida Amazonas}
+  author = {Josï¿½ Roberto de Almeida Amazonas}
 }
 
 @ARTICLE{Almeida2008,
@@ -53,7 +53,7 @@
 
 @ARTICLE{Azodolmolky2009,
   author = {Siamak Azodolmolky and Miroslaw Klinkowski and Eva Marin and Davide
-	Careglio and Josep Solé Pareta and Ioannis Tomkos},
+	Careglio and Josep Solï¿½ Pareta and Ioannis Tomkos},
   title = {{A Survey on Physical Layer Impairments Aware Routing and Wavelength
 	Assignment Algorithms in Optical Networks}},
   journal = {Computer Networks},
@@ -71,7 +71,7 @@
   author = {Guylain Barlow},
   title = {{A G.709 Optical Transport Network Tutorial}},
   year = {2004},
-  note = {Último acesso em fevereiro de 2010},
+  note = {ï¿½ltimo acesso em fevereiro de 2010},
   owner = {Alaelson},
   timestamp = {2010.02.19},
   url = {http://www.jdsu.com/product-literature/g709otn\_wp\_opt\_tm\_ae.pdf}
@@ -201,8 +201,8 @@
   title = {{The G.709 Optical Transport Network - An Overview}},
   month = oct,
   year = {2006},
-  note = {Último acesso em fevereiro de 2010},
-  address = {Almonte, ON, Canadá},
+  note = {ï¿½ltimo acesso em fevereiro de 2010},
+  address = {Almonte, ON, Canadï¿½},
   institution = {Innocor Ltd},
   owner = {Alaelson},
   timestamp = {2010.02.18},
@@ -214,7 +214,7 @@
   title = {{A Tutorial on ITU-T G.709 Optical Transport Network (OTN)}},
   month = jul,
   year = {2009},
-  note = {Último acesso em fevereiro de 2010},
+  note = {ï¿½ltimo acesso em fevereiro de 2010},
   owner = {Alaelson},
   timestamp = {2010.02.24},
   url = {http://www.pmc-sierra.com/whitepaper-processor-mips-sonet-ethernet/otn/index.html}
@@ -232,7 +232,7 @@
 @MISC{G870,
   author = {{ITU-T}},
   title = {{Terms and Definitions for Optical Transport Networks (OTN)}},
-  howpublished = {Recomendação ITU-T G.870},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.870},
   month = mar,
   year = {2008},
   owner = {Alaelson},
@@ -242,7 +242,7 @@
 @MISC{G9591,
   author = {{ITU-T}},
   title = {{Optical Transport Networks Physical Layer Interfaces}},
-  howpublished = {Recomendação ITU-T G.959.1},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.959.1},
   month = mar,
   year = {2007},
   owner = {alaelson},
@@ -252,7 +252,7 @@
 @MISC{G709,
   author = {{ITU-T}},
   title = {{Interfaces for Optical Transport Networks}},
-  howpublished = {Recomendação ITU-T G.709},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.709},
   month = dec,
   year = {2003},
   owner = {Alaelson},
@@ -262,7 +262,7 @@
 @MISC{G8080,
   author = {{ITU-T}},
   title = {{Architecture for the Automatically Switched Optical Network}},
-  howpublished = {Recomendação ITU-T G.8080},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.8080},
   month = nov,
   year = {2001},
   address = {http://www.itu.int},
@@ -277,7 +277,7 @@
 @MISC{G872,
   author = {{ITU-T}},
   title = {{Architecture of Optical Transport Networks}},
-  howpublished = {Recomendação ITU-T G.872},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.872},
   month = nov,
   year = {2001},
   owner = {Alaelson},
@@ -287,7 +287,7 @@
 @MISC{G975,
   author = {{ITU-T}},
   title = {{Forward Error Correction for Submarine Systems}},
-  howpublished = {Recomendação ITU-T G.975},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.975},
   month = oct,
   year = {2000},
   owner = {alaelson},
@@ -297,7 +297,7 @@
 @MISC{G691.1,
   author = {{ITU-T}},
   title = {{Optical Interfaces for Multichannel Systems with Optical Amplifiers}},
-  howpublished = {Recomendação ITU-T G.691.1},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.691.1},
   month = oct,
   year = {1998},
   owner = {alaelson},
@@ -307,7 +307,7 @@
 @MISC{G692,
   author = {{ITU-T}},
   title = {{Optical Interfaces for Multichannel Systems with Optical Amplifiers}},
-  howpublished = {Recomendação ITU-T G.692},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.692},
   month = oct,
   year = {1998},
   owner = {alaelson},
@@ -317,7 +317,7 @@
 @MISC{G707,
   author = {{ITU-T}},
   title = {{Optical Interfaces for Multichannel Systems with Optical Amplifiers}},
-  howpublished = {Recomendação ITU-T G.692},
+  howpublished = {Recomendaï¿½ï¿½o ITU-T G.692},
   month = oct,
   year = {1998},
   owner = {alaelson},
@@ -330,7 +330,7 @@
   year = {2002},
   author = {Ivan P. Kaminow and Tingye Li},
   volume = {B},
-  edition = {4ª},
+  edition = {4ï¿½},
   month = apr,
   owner = {Alaelson},
   timestamp = {2010.03.01}
@@ -342,7 +342,7 @@
   year = {2008},
   author = {Ivan P. Kaminow and Tingye Li and Alan E. Willner},
   volume = {B},
-  edition = {5ª},
+  edition = {5ï¿½},
   owner = {Alaelson},
   timestamp = {2010.03.01}
 }
@@ -490,9 +490,9 @@
 @MISC{Padtec2010,
   author = {Padtec},
   title = {{Plataforma LightPad i1600G: 160-channel DWDM Multiservice System}},
-  howpublished = {Manual Técnico},
+  howpublished = {Manual Tï¿½cnico},
   year = {2010},
-  note = {versão 2010\_2},
+  note = {versï¿½o 2010\_2},
   owner = {Alaelson},
   timestamp = {2011.07.22}
 }
@@ -523,7 +523,7 @@
   year = {2002},
   author = {R. Ramaswami and K. N. Sivarajan},
   address = {San Mateo, CA},
-  edition = {2ª},
+  edition = {2ï¿½},
   month = oct,
   owner = {Alaelson},
   timestamp = {2010.02.24}
@@ -534,7 +534,7 @@
   publisher = {Morgan Kaufmann},
   year = {2010},
   author = {Rajiv Ramaswami and Kumar N. Sivarajan and Galen H. Sasaki},
-  edition = {3ª},
+  edition = {3ï¿½},
   owner = {Alaelson},
   timestamp = {2010.02.24}
 }
@@ -567,7 +567,7 @@
   title = {{Optical Transport Network (OTN) Tutorial}},
   month = dec,
   year = {2007},
-  note = {Último acesso em 19 de fevereiro de 2010},
+  note = {ï¿½ltimo acesso em 19 de fevereiro de 2010},
   abstract = {This is a Tutorial. This is NOT a Recommendation! This tutorial has
 	no standards significance. It is purely for educational purposes.
 	In case of conflict between the material contained in the tutorial
@@ -599,7 +599,7 @@
 
 @MISC{GIGA,
   title = {{Projeto GIGA}},
-  note = {Último acesso em 30 de março de 2010},
+  note = {ï¿½ltimo acesso em 30 de marï¿½o de 2010},
   owner = {alaelson},
   timestamp = {2010.03.30},
   url = {http://www.giga.org.br/}
@@ -607,7 +607,7 @@
 
 @MISC{Kyatera,
   title = {{Projeto KyaTera}},
-  note = {Último acesso em 30 de março de 2010},
+  note = {ï¿½ltimo acesso em 30 de marï¿½o de 2010},
   owner = {alaelson},
   timestamp = {2010.03.30},
   url = {http://www.kyatera.fapesp.br/}
@@ -615,7 +615,7 @@
 
 @MISC{Padtec,
   title = {{Padtec S/A}},
-  note = {Último acesso em 22 de julho de 2011},
+  note = {ï¿½ltimo acesso em 22 de julho de 2011},
   owner = {alaelson},
   timestamp = {2010.03.30},
   url = {http://www.padtec.com.br/}
@@ -625,7 +625,7 @@
   title = {{An overview of ITU-T G.709}},
   month = sep,
   year = {2001},
-  note = {Último acesso em fevereiro de 2010},
+  note = {ï¿½ltimo acesso em fevereiro de 2010},
   address = {USA},
   institution = {Agilent Tecnologies},
   owner = {alaelson},
@@ -667,6 +667,12 @@ ISSN={0163-6804},}
  edition = {3rd},
  publisher = {Morgan Kaufmann Publishers Inc.},
  address = {San Francisco, CA, USA},
+}
+
+@book{DIOGENES,
+ author = {Diogenes, Yuri},
+ title = {CertificaÃ§Ã£o Cisco. Rio de Janeiro: Axcel Books},
+ year = {2004},
 }
 
 @comment{jabref-meta: selector_publisher:}
