--- a/cap2.tex
+++ b/cap2.tex
@@ -22,25 +22,23 @@ subsessão dentro de cada tecnologia de transporte.
 \label{sec:layers}
 Nesta seção será apresentado o relacionamento transversal e longitudinal entre as camadas de redes.
 De modo geral, para explicar o relacionamento longitudinal, o modelo OSI é apresentado, visto na
-Figura~\ref{fig:modelo_OSI}. De acordo com (DIOGENES, 2004), a arquitetura do modelo OSI é dividida em 7 níveis,
+Figura~\ref{fig:modelo_OSI}. De acordo com \cite{DIOGENES}, a arquitetura do modelo OSI é dividida em 7 níveis,
 compreendendo do nível do usuário (Apresentação) até o nível de transmissão do pulso elétrico (Física).
 
 \begin{figure}[H]
 	\centering
 		\includegraphics[scale=.8]{modelo_OSI.png}
-	\caption{Modelo OSI.}
+	\caption{Modelo OSI. Fonte:(Cisco NETWORKING ACADEMY PROGRAM, 10 jun 2007).}
 	\label{fig:modelo_OSI}
 \end{figure}
 
-No \textit{host} de origem, a camada de aplicação, responsável pelo interfaceamento do usuário com a rede, 
-encapsula seus dados para camada de apresentação. Esta camada traduz (codifica) os dados da aplicação 
-para a camada de Sessão, esta responsável por controlar a comunicação entre os host. Os dados da camada
-de Sessão são encapsulados dentro dos pacotes da camada de Transporte, que tem como função garantir
-a confiabilidade da transmissão fim-a-fim. Após isso, é passado a camada de Rede, que tem como função
-o gerenciamento dos melhores caminhos de dados a ser enviados pela rede. A camada de dados, tem com 
-função traduzir os dados provenientes da camada de transporte, e converter em bit, e entrega à
-camada Física, que é o próprio meio (fibra ótica, cabos coaxial, par trançado, etc.).
+No \textit{host} de origem, a camada de aplicação, responsável pelo interfaceamento do usuário com a rede, encapsula seus dados para camada de apresentação. Esta camada traduz (codifica) os dados da aplicação para a camada de Sessão, esta responsável por controlar a comunicação entre os host. Os dados da camada de Sessão são encapsulados dentro dos pacotes da camada de Transporte, que tem como função garantir a confiabilidade da transmissão fim-a-fim. Após isso, é passado a camada de Rede, que tem como função o gerenciamento dos melhores caminhos de dados a ser enviados pela rede. A camada de dados, tem com função traduzir os dados provenientes da camada de transporte, e converter em bit, e entrega à camada Física, que é o próprio meio (fibra ótica, cabos coaxial, par trançado, etc.).
 
-Após envio dos dados para camada Física, o processo de interfaceamento entre camada é feito de modo inverso no \textit{host} de destino, onde que cada camada superior, desencapsula os dados da camada imediatamente inferior. Sendo que cada nível de camada no \textit{host} de origem, se comunica apenas com a
-camada de mesmo nível no \textit{host} de destino.
+Após envio dos dados para camada Física, o processo de interfaceamento entre camada é feito de modo inverso no \textit{host} de destino, onde que cada camada superior, desencapsula os dados da camada imediatamente inferior. Sendo que cada nível de camada no \textit{host} de origem, se comunica apenas com a camada de mesmo nível no \textit{host} de destino.
 
+\subsection{Referencias}
+\begin{itemize}
+	\item Cisco NETWORKING ACADEMY PROGRAM. Cisco. Disponível em:
+www.cisco.com, Acesso em: 10 jun 2005.
+	\item DIOGENES, Yuri. , 20042004.
+\end{itemize}
