Modificação Figura OverheadSDH

--- a/referencias.bib
+++ b/referencias.bib
@@ -259,6 +259,16 @@
   timestamp = {2010.02.18}
 }
 
+@MISC{G707,
+  author = {{ITU-T}},
+  title = {{Network Node Interface for The Synchronous Digital Hierarchy (SDH)}},
+  howpublished = {Recomendação ITU-T G.707},
+  month = jan,
+  year = {2007},
+  owner = {Alaelson},
+  timestamp = {2010.02.18}
+}
+
 @MISC{G8080,
   author = {{ITU-T}},
   title = {{Architecture for the Automatically Switched Optical Network}},
@@ -314,7 +324,7 @@
   timestamp = {2010.03.18}
 }
 
-@MISC{G707,
+@MISC{G692,
   author = {{ITU-T}},
   title = {{Optical Interfaces for Multichannel Systems with Optical Amplifiers}},
   howpublished = {Recomendação ITU-T G.692},
@@ -658,16 +668,6 @@ pages={84-92},
 keywords={Books;Manufacturing;Multiplexing;Optical fiber networks;Optical fibers;Optical interconnections;Proposals;SONET;Standardization;Synchronous digital hierarchy}, 
 doi={10.1109/MCOM.2002.1006977}, 
 ISSN={0163-6804},}
-
-@book{Ramaswami2009,
- author = {Ramaswami, Rajiv and Sivarajan, Kumar and Sasaki, Galen},
- title = {Optical Networks: A Practical Perspective, 3rd Edition},
- year = {2009},
- isbn = {0123740924, 9780123740922},
- edition = {3rd},
- publisher = {Morgan Kaufmann Publishers Inc.},
- address = {San Francisco, CA, USA},
-}
 
 @comment{jabref-meta: selector_publisher:}
 
