--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -5,7 +5,7 @@ SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças 
 
 \begin{enumerate}
 
-\item {\bf Simplificações no processo de multiplexação:} Como já visto anteriormente, o processo de retirada de sinais tributários de baixas taxas de um sinal multiplexado de taxa superior é uma operação difícil na tecnologia PDH, devido ao fato de que são necessárias demultiplexações e multiplexações sucessivas para se poder localizar o tributário requerido, retirá-lo e então remontar o frame de alta taxa. Isso acaba implicando em altos custos de instalação da rede PDH e em baixa confiabilidade devido a quantidade de dispositivos eletrônicos envolvidos nos nós aos longo da rede. A estrutura de multiplexação síncrona de SONET/SDH permite significativa redução de complexidade e custos relacionados ao processo de extração e inserção de tributários em sinais multiplexados bem como aumenta a confiabilidade do sistema como um todo. Isso porque nas redes SONET/SDH, todos os nós da rede tem clock sincronizados, de modo que as taxas de transmissão são simplesmente múltiplos de um valor base e não se é necessário o preenchimento de um tributário com bits vazios para possibilitar a multiplexação, como era necessário na tecnologia PDH. Assim, a extração de um sinal tributário de um sinal de alta taxa é simplificada. Esse processo é ainda mais simplificado devido a utilização de um \textit{frame} que permite serem inseridas maiores informações sobre o \textit{payload}. O processo de inserção de tributários também se torna simplificado, já que os sinais possuem taxas de transmissão muito mais precisas e próximas umas das outras do que na tecnologia PDH~\cite{Ramaswami2009}.
+\item {\bf Simplificações no processo de multiplexação:} Como já visto anteriormente, o processo de retirada de sinais tributários de baixas taxas de um sinal multiplexado de taxa superior é uma operação difícil na tecnologia PDH, devido ao fato de que são necessárias demultiplexações e multiplexações sucessivas para se poder localizar o tributário requerido, retirá-lo e então remontar o frame de alta taxa. Isso acaba implicando em altos custos de instalação da rede PDH e em baixa confiabilidade devido a quantidade de dispositivos eletrônicos envolvidos nos nós aos longo da rede. A estrutura de multiplexação síncrona de SONET/SDH permite significativa redução de complexidade e custos relacionados ao processo de extração e inserção de tributários em sinais multiplexados bem como aumenta a confiabilidade do sistema como um todo. Isso porque nas redes SONET/SDH, todos os nós da rede tem clock sincronizados, de modo que as taxas de transmissão são simplesmente múltiplos de um valor base e não se é necessário o preenchimento de um tributário com bits vazios para possibilitar a multiplexação, como era necessário na tecnologia PDH. Assim, a extração de um sinal tributário de um sinal de alta taxa é simplificada. Esse processo é ainda mais simplificado devido a utilização de um \textit{frame} que permite serem inseridas maiores informações sobre o \textit{payload}. O processo de inserção de tributários também se torna simplificado, já que os sinais possuem taxas de transmissão muito mais precisas e próximas umas das outras do que na tecnologia PDH~\cite{Ramaswami2010}.
 
 \item{\bf Informações de Gerenciamento:} Os padrões SONET e SDH oferecem maiores recursos de monitoramento, gerenciamento e controle do que está presente nas redes PDH. Como será visto mais adiante, o \textit{frame} dos padrões SONET e SDH oferecem campos específicos a atividade de monitoramento e gestão da comunicação.
 
@@ -46,7 +46,7 @@ O cabeçalho, por sua vez, contém as informações do quadro STM-N referentes a des
 
 \end{enumerate}
 
-A Figura~\ref{fig:OverheadSDH} ilustra a disposição utilizada para as partes RSOH e MSOH no cabeçalho. 
+A Figura~\ref{fig:OverheadSDH} ilustra a disposição utilizada para as partes RSOH e MSOH no cabeçalho de um quadro STM-1. 
 
 \begin{figure}[H]
  \centering
