Modificações seção SONET/SDH

--- a/app4.tex
+++ b/app4.tex
@@ -2,6 +2,7 @@
 
 \begin{acronym}[RSVP-TE]
 \acro{AGC}{\textit{Automatic Gain Control}}
+\acro{ANSI}{\textit{American National Standards Institute}}
 \acro{APC}{\textit{Automatic Power Control}}
 \acro{APS-PCC}[APS/PCC]{\textit{Automatic Protection Switching/Protection Communication Channel}}
 \acro{ASE}{\textit{Amplified Spontaneous Emission}}
@@ -12,12 +13,14 @@
 \acro{BER}{\textit{Bit Error Rate}}
 \acro{BIAE}{\textit{Backward Incoming Alignment Error}}
 \acro{BIP-8}{\textit{Bit Interleaved Parity-8}}
+\acro{CCITT}{\textit{International Telegraph and Telephone Consultative Committee}}
 \acro{CD}{\textit{Chromatic Dispersion}}
 \acro{CBR}{\textit{Constant Bit Rate}}
 \acro{CR-LDP}{\textit{Constraint-based Label Distribution Protocol}}
 \acro{DCM}{\textit{Dispersion Compensation Module}}
 \acro{DBPSK}{\textit{Differential Binary Phase Shift Keying}}
 \acro{DPSK}{\textit{Differential Phase Shift Keying}}
+\acro{ECSA}{\textit{Exchange Carriers Standards Association}}
 \acro{EDFA}{\textit{Erbium Doped Fiber Amplifier}}
 \acro{FC1200}{10 \textit{Gigabit Fibre Channel}}
 \acro{FA}{\textit{Framing Alignment}}
