--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -1,9 +1,9 @@
 
-A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação. Em 1984, a associação americana chamada \textit{Exchange Carriers Standards Association} (ECSA) iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \textit{American National Standards Institute} (ANSI) e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \textit{Synchronous Optical Network} (SONET)~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O \textit{International Telegraph and Telephone Consultative Committee} (CCITT), atualmente conhecido como \textit{International Telecommunication Union Telecommunication Standardization Sector} (ITU-T), demonstrou interesse pelo padrão ANSI~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \textit{Synchronous Digital Hierarchy} (SDH), amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a SONET enquanto a recomendação ITU-T G.707 é a principal recomendação relacionada ao padrão SDH.
+A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a SONET enquanto a recomendação ITU-T G.707 é a principal recomendação relacionada ao padrão SDH.
 
 SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. Esses dois padrões foram desenvolvidos visando a comunicação por meio de fibras ópticas, no entanto, SDH foi também utilizado em sistemas baseados em radio-frequência. Comparando estes dois padrões com a tecnologia PDH, podem ser destacados as seguintes vantagens:
 
-\begin{enumerate}
+\begin{itemize}
 
 \item {\bf Simplificações no processo de multiplexação:} Como já visto anteriormente, o processo de retirada de sinais tributários de baixas taxas de um sinal multiplexado de taxa superior é uma operação difícil na tecnologia PDH, devido ao fato de que são necessárias demultiplexações e multiplexações sucessivas para se poder localizar o tributário requerido, retirá-lo e então remontar o frame de alta taxa. Isso acaba implicando em altos custos de instalação da rede PDH e em baixa confiabilidade devido a quantidade de dispositivos eletrônicos envolvidos nos nós aos longo da rede. A estrutura de multiplexação síncrona de SONET/SDH permite significativa redução de complexidade e custos relacionados ao processo de extração e inserção de tributários em sinais multiplexados bem como aumenta a confiabilidade do sistema como um todo. Isso porque nas redes SONET/SDH, todos os nós da rede tem clock sincronizados, de modo que as taxas de transmissão são simplesmente múltiplos de um valor base e não se é necessário o preenchimento de um tributário com bits vazios para possibilitar a multiplexação, como era necessário na tecnologia PDH. Assim, a extração de um sinal tributário de um sinal de alta taxa é simplificada. Esse processo é ainda mais simplificado devido a utilização de um \textit{frame} que permite serem inseridas maiores informações sobre o \textit{payload}. O processo de inserção de tributários também se torna simplificado, já que os sinais possuem taxas de transmissão muito mais precisas e próximas umas das outras do que na tecnologia PDH~\cite{Ramaswami2010}.
 
@@ -14,7 +14,7 @@ SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças 
 \item{\bf Disponibilidade da rede:} SONET e SDH são padrões que evoluíram para acomodar específicas topologias de rede e técnicas de proteção e protocolos associados para possibilitar altos níveis de disponibilidade. Como consequência, a atuação da proteção é em geral mais rápida do que nas redes PDH. 
 
 
-\end{enumerate} 
+\end{itemize} 
 
 A seguir, serão abordadas características importantes referentes a SDH. Porém, os conceitos também se aplicam ao padrão SONET, visto que SDH foi desenvolvido a partir do mesmo.
 
@@ -34,7 +34,7 @@ O \textit{frame} SDH é formado por duas principais partes, sendo elas o cabeçalh
 
 O cabeçalho, por sua vez, contém as informações do quadro STM-N referentes a desempenho, manutenção, monitoramento e indicações das localidades dos tributários multiplexados nos \textit{frames}, além de funções operacionais, permitindo uma gerência maior por parte dos nós da rede. Esta parte do \textit{frame} se subdivide em duas unidades básicas, a primeira delas sendo chamada de \textit{Section Overhead} (SOH) e a segunda de \textit{Administrative Unit Pointers}. A seguir, apresenta-se uma breve descrição das funcionalidade contidas em cada uma das partes mencionadas:
 
-\begin{enumerate}
+\begin{itemize}
 
 \item{\bf \textit{Section Overhead} (SOH):} Esta seção se divide em duas principais partes, como indicado a seguir:
 
@@ -44,7 +44,7 @@ O cabeçalho, por sua vez, contém as informações do quadro STM-N referentes a des
 
 \item{\bf \textit{Administrative Unit Pointers}:} Esta é uma parte do cabeçalho destinada a prover informações de posição dos dados dos clientes que foram multiplexados para formarem o \textit{frame} SDH. Possui indicação de onde se localiza o primeiro \textit{byte} dos \textit{Virtual Containers} (VC) dentro da área de informação útil (\textit{payload}) e também pode conter \textit{bytes} provenientes de justificação dos VCs. É uma parte do cabeçalho processada em cada equipamento da rede
 
-\end{enumerate}
+\end{itemize}
 
 A Figura~\ref{fig:OverheadSDH} ilustra a disposição utilizada para as partes RSOH e MSOH no cabeçalho de um quadro STM-1. 
 
