--- a/app4.tex
+++ b/app4.tex
@@ -103,6 +103,7 @@
 \acro{SDH}{\textit{Synchronous Digital Hierarchy}}
 %\acro{SP}{Shortest Path}
 \acro{SPM}{\textit{Self-Phase Modulation}}
+\acro{STM}{\textit{Synchronous Transport Module}}
 %\acro{SRLG}{Shared Risk Link Group}
 \acro{SRS}{\textit{Stimulated Raman Scattering}}
 \acro{TCM}{\textit{Tandem Connection Monitoring}}
