--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -1,7 +1,7 @@
 
 A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a SONET enquanto a recomendação ITU-T G.707 é a principal recomendação relacionada ao padrão SDH.
 
-SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. Esses dois padrões foram desenvolvidos visando a comunicação por meio de fibras ópticas, no entanto, SDH foi também utilizado em sistemas baseados em radio-frequência. Comparando estes dois padrões com a tecnologia PDH, podem ser destacados as seguintes vantagens:
+SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. Esses dois padrões foram desenvolvidos visando a comunicação por meio de fibras ópticas mas, por exemplo, SDH foi também utilizado em sistemas baseados em radio-frequência. Comparando estes dois padrões com a tecnologia PDH, podem ser destacados as seguintes vantagens:
 
 \begin{itemize}
 
@@ -20,7 +20,7 @@ A seguir, serão abordadas características importantes referentes a SDH. Porém, o
 
 \subsection{Estrutura do \textit{frame} SDH}
 
-Uma das principais características do \textit{frame} SDH é sua bidimensionalidade, já que tal \textit{frame} é definido por uma quantidade de linhas e colunas como ilustrado na Figura~\ref{fig:FrameSDH}. O \textit{frame} SDH possui 9 linhas e 270 \(\cdot\) N colunas, de forma que cada linha é tratada como um \textit{bit} enquanto cada coluna é tratada como um \textit{byte}. N é justamente o parâmetro que identifica a qual hierarquia se está referenciando e pode ser obtido observando que as hierarquias são definidas seguindo o padrão STM-N, para N igual a 1, 4, 16, 64 e 256 e é interessante ressaltar que para o caso STM-0 existem apenas 9 linhas e 90 colunas como já indicado na Figura~\ref{fig:FrameSDH}, correspondendo ao \textit{frame} STS-1 do padrão SONET. Outra característica importante é que independentemente do tamanho e consequentemente do número de bits do \textit{frame}, sua duração é sempre de 125 \(\mu s\), representando uma taxa de repetição de 8000 kHz herdada dos antigos sistemas PDH. Nessa estrutura, os bits são transmitidos, da esquerda para a direita, em cada linha até se alcançar o fim do \textit{frame}.
+Uma das principais características do \textit{frame} SDH é sua bidimensionalidade, já que tal \textit{frame} é definido por uma quantidade de linhas e colunas como ilustrado na Figura~\ref{fig:FrameSDH}. O \textit{frame} SDH possui um número fixo de linhas e um número de colunas dependente da hierarquia SDH a que se está referenciando. De forma mais precisa, tal \textit{frame} possui 9 linhas e 270 x N colunas, onde N é o termo dependente da hierarquia e que pode ser obtido observando que as hierarquias são definidas seguindo o padrão \ac{STM}-N, para N igual a 1, 4, 16, 64 e 256 e é interessante ressaltar que para o caso STM-0 existem apenas 9 linhas e 90 colunas como já indicado na Figura~\ref{fig:FrameSDH}, correspondendo ao \textit{frame} STS-1 do padrão SONET. Cada linha nesta estrutura é tratada como um \textit{bit} enquanto cada coluna é tratada como um \textit{byte}. Outra característica importante é que independentemente do tamanho e consequentemente do número de bits do \textit{frame}, sua duração é sempre de 125 \(\mu s\), representando uma taxa de repetição de 8000 kHz herdada dos antigos sistemas PDH. Nessa estrutura, os bits são transmitidos, da esquerda para a direita, em cada linha até se alcançar o fim do \textit{frame}.
 
 \begin{figure}[H]
  \centering
@@ -29,10 +29,7 @@ Uma das principais características do \textit{frame} SDH é sua bidimensionalidad
  \label{fig:FrameSDH}
 \end{figure}
 
-O \textit{frame} SDH é formado por duas principais partes, sendo elas o cabeçalho ou \textit{overhead}, que é composto por 9 \(\cdot\) N colunas (sendo N o nível da hierarquia) e 9 linhas e o \textit{payload}, composto por 261 \(\cdot\) N colunas e 9 linhas. O \textit{payload} é a parte onde os dados dos clientes são inseridos para a transmissão. 
-
-
-O cabeçalho, por sua vez, contém as informações do quadro STM-N referentes a desempenho, manutenção, monitoramento e indicações das localidades dos tributários multiplexados nos \textit{frames}, além de funções operacionais, permitindo uma gerência maior por parte dos nós da rede. Esta parte do \textit{frame} se subdivide em duas unidades básicas, a primeira delas sendo chamada de \textit{Section Overhead} (SOH) e a segunda de \textit{Administrative Unit Pointers}. A seguir, apresenta-se uma breve descrição das funcionalidade contidas em cada uma das partes mencionadas:
+O \textit{frame} SDH é formado por duas principais partes, sendo elas o cabeçalho ou \textit{overhead}, que é composto por 9 x N colunas (sendo N o nível da hierarquia) e 9 linhas e o \textit{payload}, composto por 261 x N colunas e 9 linhas. O \textit{payload} é a parte onde os dados dos clientes são inseridos para a transmissão. O cabeçalho, por sua vez, contém as informações do quadro STM-N referentes a desempenho, manutenção, monitoramento e indicações das localidades dos tributários multiplexados nos \textit{frames}, além de funções operacionais, permitindo uma gerência maior por parte dos nós da rede. Esta parte do \textit{frame} se subdivide em duas unidades básicas, a primeira delas sendo chamada de \textit{Section Overhead} (SOH) e a segunda de \textit{Administrative Unit Pointers}. A seguir, apresenta-se uma breve descrição das funcionalidade contidas em cada uma das partes mencionadas:
 
 \begin{itemize}
 
