--- a/app4.tex
+++ b/app4.tex
@@ -55,6 +55,7 @@
 \acro{LSP}{\textit{Label Switched Path}}
 \acro{MFAS}{\textit{Multi-Frame Alignment Signal}}
 \acro{MPLS}{\textit{Multi-Protocol Label Switching}}
+\acro{MSOH}{\textit{Multiplex Section Overhead}}
 \acro{NSFNet}{\textit{National Science Foundation Network}}
 \acro{NTTNet}{\textit{Nippon Telegraph and Telephone Network}}
 \acro{O-E-O}{Ótica-Eletrônica-Ótica}
@@ -91,6 +92,7 @@
 \acro{QoT}{\textit{Quality of Transmission}}
 \acro{RFC}{\textit{Request For Comments}}
 \acro{RS}{Reed-Solomon}
+\acro{RSOH}{\textit{Regenerator Section Overhead}}
 \acro{RSVP}{\textit{Resource ReSerVation Protocol}}
 \acro{RSVP-TE}{\textit{Resource ReSerVation Protocol with Traffic Engineering}}
 \acro{RWA}{\textit{Routing and Wavelength Assignment}}
@@ -102,6 +104,7 @@
 \acro{SONET}{\textit{Synchronous Optical Networking}}
 \acro{SDH}{\textit{Synchronous Digital Hierarchy}}
 %\acro{SP}{Shortest Path}
+\acro{SOH}{\textit{Section Overhead}}
 \acro{SPM}{\textit{Self-Phase Modulation}}
 \acro{STM}{\textit{Synchronous Transport Module}}
 %\acro{SRLG}{Shared Risk Link Group}
@@ -116,6 +119,7 @@
 \acro{UNICAMP}{Universidade Estadual de Campinas}
 \acro{UDP}{\textit{User Datagram Protocol}}
 \acro{USP}{Universidade de São Paulo}
+\acro{VC}{\textit{Virtual Container}}
 \acro{VCAT}{\textit{Virtual Concatenator}}
 \acro{VoIP}{\textit{Voice over IP}}
 \acro{WDM}{\textit{Wavelength Division Multiplexing}}
