Inserção: CAMADAS SDH

--- a/referencias.bib
+++ b/referencias.bib
@@ -675,6 +675,19 @@ ISSN={0163-6804},}
  year = {2004},
 }
 
+@MISC{BernalFilho2003,
+	author = {Bernal Filho, Huber},
+  title = {{Redes SDH}},
+  month = sep,
+  year = {2003},
+  note = {Último acesso em Junho de 2010},
+  address = {Brasil},
+  institution = {Teleco},
+  owner = {alaelson},
+  timestamp = {2015.06.10},
+  url = {http://www.teleco.com.br/tutoriais/tutorialrsdh/pagina_1.asp}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
