--- a/app4.tex
+++ b/app4.tex
@@ -79,6 +79,7 @@
 \acro{OTU}{\textit{Optical Channel Transport Unit}}
 \acro{OH}{\textit{overhead}}
 \acro{OXC}{\textit{Optical Cross-Connect}}
+\acro{POH}{\textit{Path Overhead}}
 \acro{POLSK}{\textit{Polarization-shift Keying}}
 \acro{PM}{\textit{Path Monitoring}}
 \acro{PMD}{\textit{Polarization Mode Dispersion}}
