--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -1,5 +1,5 @@
 
-A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a SONET enquanto a recomendação ITU-T G.707 é a principal recomendação relacionada ao padrão SDH.
+A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação, com foco na transmissão óptica. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a SONET enquanto as recomendações ITU-T G.691, ITU-T G.707 e ITU-T G.781 são exemplos relacionados ao padrão SDH.
 
 SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. Esses dois padrões foram desenvolvidos visando a comunicação por meio de fibras ópticas mas, por exemplo, SDH foi também utilizado em sistemas baseados em radio-frequência. Comparando estes dois padrões com a tecnologia PDH, podem ser destacados as seguintes vantagens:
 
@@ -52,7 +52,7 @@ O \textit{frame} SDH é formado por duas principais partes, sendo elas o cabeçalh
 
 \subsection{Camadas de SDH}
 
-A tecnologia SDH apresenta uma estruturação em camadas como apresentada na Figura~\ref{fig:SDHlayers}.
+A tecnologia SDH apresenta uma estruturação em camadas como apresentada na Figura~\ref{fig:SDHlayers}. Através de tal figura pode ser percebido que SDH possui quatro camadas, sendo elas a Camada de Via (\textit{Path layer}), Camada de Seção de Multiplexação (\textit{Multiplex Section Layer}), Camada de Seção de Regeneração (\textit{Regeneration Section Layer}) e Camada Física (\textit{Physical Layer}). Para o caso das redes ópticas, a Camada Física diz respeito a infraestrutura óptica de transmissão, com seus respectivos dispositivos~\cite{Alwayn2004}.
 
 \begin{figure}[H]
  \centering
@@ -60,6 +60,12 @@ A tecnologia SDH apresenta uma estruturação em camadas como apresentada na Figur
   \caption{Estruturação em Camadas de SDH - ~\cite{BernalFilho2003}.}
  \label{fig:SDHlayers}
 \end{figure}
+
+O conceito de via em SDH se refere a uma conexão lógica entre o ponto em que se monta o quadro SDH padrão, pela inserção de tributários e o ponto em que o quadro SDH padrão é desmontado, pela retirada de tributários, ou seja, se relaciona a uma conexão lógica fim-a-fim. A montagem do quadro SDH consiste na ação de inserir os dados dos clientes nas estruturas denominadas de \textit{Containers}, que consistem em unidades básicas de dados com bytes alocados para o transporte dos dados de mais baixas taxas dos clientes, por exemplo pode ser um sinal E1 da hierarquia PDH e associar a esses \textit{Containers} rótulos denominados de \ac{POH} com informações de controle. O processo de desmontagem realiza caminho inverso, retirando o \ac{POH} e o utilizando como informação para dar seguimento ao conteúdo dos \textit{Containers}. A Camada de Via é justamente responsável por realizar tais atividades e está relacionada à conexão fim-a-fim entre nós SDH onde se monta e desmonta o \textit{frame}. É possível que nós intermediários da rede possam realizar monitoramento de performance dos sinais da Camada de Via, porém, os bits de cabeçalho referentes a essa camada são somente iniciados do ponto de montagem e terminados no ponto de desmontagem do quadro SDH.
+
+O processo descrito anteriormente é indicado na Figura~\ref{fig:SDHlayers}, onde se indica que os dados provenientes da Camada de Circuitos são inseridos em \ac{VC}s. E como também pode ser analisado, a Camada de Via se divide em Via de Baixa Ordem e Via de Alta Ordem. A diferença básica entre estas duas estruturas consiste no fato de que na Via de Baixa Ordem, dados são inseridos em \textit{Containers} de menor tamanho e na Via de Alta Ordem, os \textit{Containers} podem carregar mais de um \ac{VC} anteriormente montado ou carregar dados de clientes que sejam de mais altas taxas de transmissão.
+
+
 
 
 
